# podup

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  about.hbs  about.toml  deny.toml  install.ps1  install.sh  rustfmt.toml
.github/: CODEOWNERS  SECURITY.md  actionlint.yaml  dependabot.yml  podman-known-failures-5
.github/scripts/: check-asset-names.py  sign-requirements.txt  sign.py  verify-signing-key.py
.github/workflows/: asset-contract.yml  audit.yml  benchmark.yml  ci.yml  dco.yml  debian-build.yml  fuzz.yml  line-limit.yml  lint-powershell.yml  lint-shell.yml  main-guard.yml  podman-lane.yml  podman-watch.yml  podman6-lane.yml  pr-guard.yml  release.yml  supply-chain.yml  workflow-lint.yml
bench/: README.md  aggregate.py  chart.py  run.sh
bench/scenarios/config-heavy/: .env  common.env  compose.override.yaml  compose.yaml
bench/scenarios/deep-chain/: compose.yaml
bench/scenarios/many-services/: compose.yaml
bench/scenarios/multi-healthcheck/: compose.yaml
bench/scenarios/network-ipam/: compose.yaml
bench/scenarios/running-ops/: compose.yaml
bench/scenarios/scale/: compose.yaml
bench/scenarios/single/: compose.yaml
bench/scenarios/volume-heavy/: compose.yaml
bench/scenarios/warm-restart/: compose.yaml
bench/scenarios/wide-level/: compose.yaml
bench/scenarios/wide-running-ops/: compose.yaml
debian/: .gitignore  changelog  control  copyright  podup.1  podup.manpages  rules
docs/: autostart.md  benchmarks.md  commands.md  debian-packaging.md  docker-migration.md  security-model.md  self-update.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: dotenv.rs  parse_compose.rs  size.rs  stream_frame.rs  substitute.rs
internal/: autostart_cmd.rs  cli.rs  dispatch.rs  dotenv.rs  env_file.rs  error.rs  exit_status.rs  filesystem.rs  fsutil.rs  generate.rs  lib.rs  main.rs  ports.rs  resolve.rs  size.rs  startup.rs  substitute.rs
internal/autostart/: mod.rs  quadlet.rs  service.rs  tests.rs
internal/autostart/quadlet/: tests.rs
internal/cli/: commands.rs  mod.rs  parse.rs  types.rs
internal/compose/: anchor.rs  diagnostics.rs  extends.rs  include.rs  merge.rs  mod.rs  order.rs  tags.rs  validate.rs
internal/compose/diagnostics/: ignored_fields.rs  mod.rs  nested_raw.rs  tests.rs
internal/compose/extends/: merge.rs  mod.rs
internal/compose/extends/merge/: tests.rs
internal/compose/types/: build.rs  deploy.rs  develop.rs  env.rs  lifecycle.rs  mod.rs  network.rs  ports.rs  primitives.rs  resources.rs  service.rs  volume.rs
internal/dispatch/: rest.rs
internal/engine/: build.rs  commit_export.rs  config_digests.rs  container.rs  container_config.rs  container_fields.rs  container_misc.rs  copy.rs  copy_archive.rs  events.rs  fake_podman.rs  health.rs  lifecycle.rs  lock.rs  mod.rs  names.rs  network.rs  profiles.rs  projects.rs  query.rs  secrets.rs  staging.rs  stats.rs  stats_tests.rs  terminal_pump.rs  tests.rs  volume.rs  volume_mounts.rs  volumes_list.rs  watch.rs
internal/engine/container/: fields.rs  mod.rs  resolve.rs  security.rs
internal/engine/container_config/: mod.rs  resources.rs
internal/engine/copy/: archive.rs
internal/engine/image/: digests.rs  export.rs  mod.rs
internal/engine/lifecycle/: commands.rs  down_label.rs  images.rs  mod.rs  parallel.rs  prefetch.rs  readiness.rs  run.rs  run_attached.rs  scale.rs  schedule.rs  signal.rs  targets.rs  tests.rs
internal/engine/network/: mod.rs  tests.rs
internal/engine/query/: exec.rs  exec_interactive.rs  inspect.rs  inspect_util.rs  log_prefix.rs  logs.rs  mod.rs  ps.rs  terminal.rs  tests.rs
internal/engine/query/ps/: tests.rs
internal/engine/query/terminal/: mod.rs  unix.rs  windows.rs
internal/engine/secrets/: mod.rs  plan.rs
internal/engine/volume/: list.rs  mod.rs
internal/engine/volume_mounts/: mod.rs  spec.rs
internal/engine/watch/: mod.rs  placement.rs  sync.rs
internal/libpod/: client.rs  error.rs  mod.rs
internal/libpod/client/: encode.rs  hijack.rs  mod.rs  stream.rs  tests.rs
internal/libpod/types/: container.rs  exec.rs  image.rs  mod.rs  network.rs  stream.rs  volume.rs
internal/libpod/types/container/: mod.rs  response.rs  spec.rs
internal/libpod/types/container/spec/: mod.rs  parts.rs
internal/podman/: mod.rs
internal/quadlet/: mod.rs  render.rs  unit.rs  warnings.rs
internal/quadlet/tests/: fields.rs  health.rs  mod.rs  network_volume.rs  units.rs
internal/quadlet/unit/: build.rs  container.rs  health.rs  mod.rs  network.rs  security.rs  volume.rs
internal/startup/: config_normalize.rs  config_render.rs  mod.rs
internal/substitute/: mod.rs  parse.rs  tests.rs
internal/ui/: mod.rs  mod_tests.rs  table.rs
internal/update/: github.rs  install.rs  mod.rs  pkg.rs  verify.rs
packaging/apt/: build-keyring.sh  build-repo.sh  podup-apt-key.asc  podup.sources
tests/: cli_aliases.rs  cli_diagnostics.rs  cli_flags.rs  docs_flags.rs  engine_integration.rs  env_file.rs  output_contract.rs  parse.rs  ports.rs  project_name_safety.rs  quadlet.rs  secret_safety.rs  size.rs  substitute.rs
tests/engine_integration/: autostart_quadlet.rs  build_resources.rs  cli1.rs  cli2.rs  cli3.rs  cli_flags.rs  cli_lifecycle.rs  commands_networking.rs  cp_flags.rs  create_ls.rs  exec_flags.rs  group_a1.rs  group_a2.rs  group_a3.rs  group_a4.rs  group_b1.rs  health_targeting.rs  lifecycle.rs  lifecycle_output.rs  niche.rs  run_flags.rs  scale.rs  stats_flags.rs  watch.rs
tests/env_file/: loading.rs  merge.rs
tests/parse/: anchors.rs  basic.rs  coverage.rs  extends.rs  fields.rs  include.rs  new_keys.rs  order.rs
tests/parse/coverage/: deploy_build.rs  part1.rs  part3.rs  resources_secrets.rs
tests/parse/fields/: extends_build.rs  part1.rs  runtime_options.rs
tests/ports/: conversion.rs  formats.rs
tests/substitute/: dotenv.rs  modifiers.rs
