[package]
name = "podup"
version = "0.5.4"
edition = "2021"
rust-version = "1.85"
description = "Translate and run docker-compose files on rootless Podman"
license = "Apache-2.0"
repository = "https://github.com/Glyndor/podup"
homepage = "https://github.com/Glyndor/podup"
readme = "README.md"
keywords = ["podman", "compose", "containers", "docker-compose", "rootless"]
categories = ["command-line-utilities", "virtualization"]
exclude = ["/.github", "/debian", "/docs", "/install.sh", "/tests"]

[[bin]]
name = "podup"
path = "internal/main.rs"

[lib]
name = "podup"
path = "internal/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
bollard = "0.21"
clap = { version = "4", features = ["derive", "env"] }
indexmap = { version = "2", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
tar = { version = "0.4", default-features = false }
flate2 = "1.0"
bytes = "1"
walkdir = "2"
notify = { version = "8", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["watch"]
watch = ["notify"]
test-helpers = []

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"

[workspace]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
