[package]
name = "podup"
version = "1.4.0"
edition = "2021"
rust-version = "1.85"
description = "Translate and run docker-compose files on rootless Podman"
license = "Apache-2.0"
repository = "https://github.com/Glyndor/podup"
homepage = "https://glyndor.net/projects/podup"
documentation = "https://docs.rs/podup"
readme = "README.md"
keywords = ["podman", "compose", "quadlet", "docker-compose", "rootless"]
categories = ["command-line-utilities", "virtualization", "development-tools"]
exclude = ["/.github", "/debian", "/deny.toml", "/docs", "/install.ps1", "/install.sh", "/tests"]

[[bin]]
name = "podup"
path = "internal/main.rs"

[lib]
name = "podup"
path = "internal/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "error-context", "derive", "env"] }
clap_complete = { version = "4", optional = true }
indexmap = { version = "2", features = ["serde"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tar = { version = "0.4", default-features = false }
flate2 = "1.0"
bytes = "1"
notify = { version = "8", optional = true }
# Self-update: HTTPS fetch of signed release assets and verification.
# ureq (rustls + webpki roots) keeps static musl builds self-contained; the
# Ed25519 signature pinned to an embedded key is the real trust anchor, not TLS.
ureq = { version = "3", default-features = false, features = ["rustls"], optional = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std"], optional = true }
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["watch", "completions", "update"]
watch = ["notify"]
completions = ["dep:clap_complete"]
# Self-update over HTTPS with Ed25519 verification. Off for package-manager
# builds (Debian/apt) where the manager owns upgrades; on for direct tarballs.
update = ["dep:ureq", "dep:ed25519-dalek"]
test-helpers = []

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"

[workspace]
exclude = ["fuzz"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
